# MyGame

./: .gitignore  CMakeLists.txt  Console.bat  LICENSE  MyGame.apk  settings.gradle.kts
.github/workflows/: build.yml
.github/worlkflow/: build.yml
Core/c/Clock/: Clock.c
Core/c/Log/: Log.c
Core/c/Log/include/: LogLevel.h
Core/c/Time/: Time.c
Core/c/include/: Clock.h  Core.h  Log.h  Time.h
Core/cpp/Log/: Log.cpp
Core/cpp/Log/include/: LogLevel.h
Core/cpp/include/: Log.hpp  api.hpp
Platform/Android/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  local.properties  settings.gradle.kts
Platform/Android/app/: build.gradle.kts
Platform/Android/app/src/main/: AndroidManifest.xml
Platform/Android/app/src/main/java/org/main/: MainActivity.java
Platform/Android/c/: lib.c
Platform/Android/cpp/: lib.cpp
Platform/Android/java/org/main/: MainActivity.java
Platform/Android/java/org/main/Network/: Network.java
Platform/Core/: CMakeLists.txt
Platform/Core/cpp/Network/: Network.cpp
Platform/Core/cpp/include/: Network.hpp  api.hpp
Platform/Linux/: CMakeLists.txt
Platform/Linux/c/: main.c
Platform/Linux/cpp/: main.cpp
Platform/MacOS/: CMakeLists.txt
Platform/MacOS/cpp/: main.mm
Platform/Windows/: CMakeLists.txt
Platform/Windows/c/: main.c
Platform/Windows/cpp/: main.cpp
Platform/iOS/: CMakeLists.txt
