cmake_minimum_required(VERSION 3.20)
cmake_policy(VERSION 3.20)

project(MyGame)

if(ANDROID)
    add_subdirectory(Platform/Android)
elseif (IOS)
    set(OUT_DIR "Executable/iOS")
    add_subdirectory(Platform/iOS)
elseif (APPLE AND NOT IOS)
    set(OUT_DIR "Executable/MacOS")
    add_subdirectory(Platform/MacOS)
elseif (LINUX)
    set(OUT_DIR "Executable/Linux")
    add_subdirectory(Platform/Linux)
elseif (WIN32)
    set(OUT_DIR "Executable/Windows")
    add_subdirectory(Platform/Windows)
else ()
    message(FATAL_ERROR "Unsupported Platform")
endif()