cmake_minimum_required(VERSION 3.20)
cmake_policy(VERSION 3.20)

project(MyGame)

set(OUTPUT_ROOT "${CMAKE_SOURCE_DIR}/Executables")

if (IOS)
    set(OUT_DIR "${OUTPUT_ROOT}/iOS")
    add_subdirectory(Platform/iOS)
elseif (APPLE AND NOT IOS)
    set(OUT_DIR "${OUTPUT_ROOT}/MacOS")
    add_subdirectory(Platform/MacOS)
elseif (LINUX)
    set(OUT_DIR "${OUTPUT_ROOT}/Linux")
    add_subdirectory(Platform/Linux)
elseif (WIN32)
    set(OUT_DIR "${OUTPUT_ROOT}/Windows")
    add_subdirectory(Platform/Windows)
else ()
    message(FATAL_ERROR "Unsupported Platform")
endif()